homelab-gitops/apps/awx/base/postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: awx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  serviceName: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              valueFrom:
                secretKeyRef:
                  key: database
                  name: awx-postgres-configuration
            - name: POSTGRES_USER
              valueFrom:
                secretKeyRef:
                  key: username
                  name: awx-postgres-configuration
            - name: POSTGRES_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: password
                  name: awx-postgres-configuration
            - name: PGDATA
              value: /var/lib/postgresql/data/pgdata
          image: postgres:16
          livenessProbe:
            exec:
              command:
                - sh
                - '-ec'
                - pg_isready -h 127.0.0.1 -p 5432
            failureThreshold: 6
            initialDelaySeconds: 20
            periodSeconds: 20
            timeoutSeconds: 5
          name: postgres
          ports:
            - containerPort: 5432
              name: postgres
          readinessProbe:
            exec:
              command:
                - sh
                - '-ec'
                - pg_isready -h 127.0.0.1 -p 5432
            failureThreshold: 6
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: pgdata
      securityContext:
        fsGroup: 999
  volumeClaimTemplates:
    - metadata:
        name: pgdata
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 10Gi
        storageClassName: longhorn
